2010-03-10  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Added new default values for purge event,
	string data, audit data, gis data, and snmp trap data.
	
	* include/functions_config.php: Support for new gis_purge config
	token.

	* godmode/setup/performance.php: Added gis_purge to setup.

	* godmode/users/user_list.php: Fixed bug which doesn't allow to
	delete users.
	
	* godmode/users/configure_user.php: Fixed bug with profile assigment
	(Mixed the current user and selected user).

2010-03-10  Junichi Satoh <junichi@rworks.jp>

	* general/license/pandora_info_ja.html : Added the GPL in Japanese.

2010-03-09  Miguel de Dios  <miguel.dedios@artica.es>

	* index.php: changed the deprecated var $REMOTE_ADDR for standar
	$_SERVER['REMOTE_ADDR']. I forget in the last commit.

	* operation/gis_maps/render_view.php, operation/gis_maps/index.php,
	operation/menu.php, godmode/gis_maps/configure_gis_map.php: fix the ACL
	and add in other sites of source code.

2010-03-09  Miguel de Dios  <miguel.dedios@artica.es>

	* include/config_process.php, extensions/dbmanager.php,
	extensions/update_manager/settings.php, extensions/pandora_logs.php,
	extensions/plugin_registration.php, operation/snmpconsole/snmp_view.php,
	operation/events/event_statistics.php, operation/events/events.php,
	operation/extensions.php, operation/visual_console/render_view.php,
	operation/agentes/status_monitor.php, operation/agentes/export_csv.php,
	operation/agentes/datos_agente.php,
	operation/agentes/estado_generalagente.php,
	operation/agentes/estado_agente.php, operation/agentes/sla_view.php,
	operation/agentes/gis_view.php, operation/agentes/ver_agente.php,
	operation/agentes/tactical.php, operation/agentes/group_view.php,
	operation/agentes/networkmap.php, operation/reporting/reporting_xml.php,
	operation/reporting/reporting_viewer.php,
	operation/reporting/graph_viewer.php, operation/servers/view_server.php,
	operation/servers/view_server_detail.php, general/logoff.php,